c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/union_two_tags.c
/* Union tag must be a single identifier */

union x y {
    int a;
};